--- a/WebAPI/appsettings.Development.json
+++ b/WebAPI/appsettings.Development.json
@@ -1,4 +1,12 @@
 {
+  "TokenOptions": {
+    "Audience": "tolga@tolga.com",
+    "Issuer": "tolga@tolga.com",
+    "AccessTokenExpiration": 10,
+    "SecurityKey": "mysupersecretkeymysupersecretkeymysupersecretkey"
+  },
+
+
   "Logging": {
     "LogLevel": {
       "Default": "Information",
